docs: refer to latest chakra cli during migration

--- a/apps/www/content/docs/get-started/migration.mdx
+++ b/apps/www/content/docs/get-started/migration.mdx
@@ -36,7 +36,7 @@ pre-built compositions of Chakra components to save you time and put you in
 charge.
 
 ```bash
-npx @chakra-ui/cli snippet add
+npx @chakra-ui/cli@latest snippet add
 ```
 
 ### Refactor Custom Theme
